The current version of Ruby Reports is 0.4.13

changes since 0.4.11

- Ruport is now on Trac.
  http://stonecode.svnrepository.com/ruport/

- I apparently never knew how to use inject.  
  Injects are all functional now.

- Fixed a bug in DataSet that made fields not get duped properly

changes since 0.4.9

- DataSet#column_names and DataRow#column_names have been added as alias to
  fields.

- Plugins are now safely copied when used via DataSet#as or the generated
  Format::simple_interface(Format.table,Format.document,etc)

- Dropped insert_row / insert_column from Format::Engine::Table.
  These are no longer needed.

- Reworked format engine unit tests to decouple from specific plugins.

- vendored SystemExtensions from HighLine to get terminal_width /
  terminal_height functions

- DataSet#add_columns and DataSet#add_columns! has been added

- Added pre and post hooks for Plugins.  Individual plugins choose if and 
  how to implement them.

- Parser is gone

- Format::Builder is gone

- fixed a bug in rails support. :columns now works properly.

- fieldnames can now be disabled in CSV loading

- DataSet.load now loads empty cells as nil instead "" by default

- fixed HTML table output in HTMLPlugin

- Select / Remove columns now accepts ordinal indexes 

changes since 0.4.5:

- Added acts_as_reportable for ActiveRecord / rails.  whoo

- Mailer now can handle attachments and html emails.
  API Breakage. Needs mailfactory unless you use the hooks for other
  mailers.

- Added a rewrite_column action to the tabular engine

- Added Ruport.configure shortcut interface

- went back to the old style of output for DataSet.to_s 
  Modified TextPlugin to accomplish this

- Crackrock feature:  Engine forwards enumerable methods to it's data.

- DataSets and DataRows can now be created without specifying field names.

- Added uport.rb .  I needed to steal from RubyGems :)

- Fixed some requires

- Temporarily removed mail support from Ruport::Report
